# BIOCreaterBot

./: .env.example  README.md  __main__.py  pyproject.toml
src/: __main__.py  config.py
src/db/: __init__.py  models.py
src/handlers/: __init__.py  bio.py  start.py
src/middlewares/: __init__.py
src/states/: __init__.py  bio_states.py
